# pnp-job-tracker

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  STATUS.md  prd.md  pyproject.toml
.claude/: launch.json
cms/: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
cms/src/: middleware.ts  payload-types.ts  payload.config.ts  (+1 more)
docker/: .env.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml
docs/: ETL目录重组设计方案.md  STATUS存档-2026H1.md  advisor-fields-plan.md  source-framework.md  产品重设计提案.md  免费付费分层设计-20260719.md  冷启动帖子.md  功能价值盘点与数据缺口.md  功能盈利点检查.md  实现计划.md  弹框规范.md  整体开发计划.md  整改轮次存档.md  模块架构总图.md  用户信息与社交登录规划.md  痛点全量盘点与付费推导.md  痛点盘点-证据附录.md  移民路径方案引擎规划.md  队列付费复审-20260719.md  顾问弹框字段规范.md
etl/: 01_scrape_directory.py  02_build_company_folders.py  03_find_careers.py  04_scrape_ats_jobs.py  04b_extract_ats_salary.py  04c_clean_ats_locations.py  05_scrape_jobbank.py  05b_scrape_jobbank_details.py  06_build_jobbank_companies.py  06_scrape_aip_employers.py  08_score.py  09_build_mart.py  10_build_rankings.py  11_build_stats.py  _paths.py  _scrape_base.py  audit_data.py  auto_update.py  backup_db.py  build_aaip.py  build_dli.py  build_ee_categories.py  build_ee_draws.py  build_field_sources.py  build_fsa_districts.py  build_lmia.py  build_noc_descriptions.py  build_oinp.py  build_pnp_from_policy.py  build_wages.py  check_deploy.py  enrich_companies.py  grades.py  noc.py  run_now.py  scrape_ircc_stats.py  upload_mart.py
pnp_job_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2409 files in other folders)
