[project]
name = "pnp-job-tracker"
version = "0.1.0"
description = "Daily-updating, immigration-scored job tracker for Canada's employer-offer PNP routes."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "lxml>=5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
